--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Adidas">
     <meta name="description" content="descrip cion de la tienda de Adidas.">
     <meta name="theme-color" content="#0066229">
-    <meta property="og:url" content="https://jairodragon.github.io/metadatos-html">
+    <meta property="og:url" content="https://jairodragon.github.io/metadatos-html/">
     <meta property="og:title" content="Adidas - Tienda Oficial">
-    <meta property="og:image" content="https://jairodragon.github.io/metadatos-html/og-adidas-image.png">
+    <meta property="og:image" content="https://jairodragon.github.io/metadatos-html/og-adidas-image.png/">
     <meta property="og:description" content="tienda adidas descripcion">
 
 </head>
