--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
     <title>Adidas - Tienda</title>
    
-    <meta name="author" content="Adidas">
-    <meta name="description" content="descrip cion de la tienda de Adidas.">
+    <meta name="author" content="Jairo Soliz">
+    <meta name="description" content="descripcion de la tienda de Adidas.">
     <meta name="theme-color" content="#0066229">
-    <meta property="og:url" content="https://jairodragon.github.io/metadatos-html/">
+    <meta property="og:url" content="https://JairoSolizOrtiz1.github.io/metadatos-html/">
     <meta property="og:title" content="Adidas - Tienda Oficial">
-    <meta property="og:image" content="https://jairodragon.github.io/metadatos-html/og-adidas-image.png">
+    <meta property="og:image" content="https://JairoSolizOrtiz1.github.io/metadatos-html/og-adidas-image.png">
     <meta property="og:description" content="tienda adidas descripcion">
 
 </head>
